fix: code snippets overflow styling

--- a/assets/scss/partials/note-content.scss
+++ b/assets/scss/partials/note-content.scss
@@ -92,7 +92,8 @@ main {
     grid-area: content;
     display: inline-block;
     padding: var(--main-padding);
-    width: 100%;
+    width: calc(100vw - 325px - 72px);
+    max-width: 1200px;
     box-sizing: border-box;
     justify-self: left;
 }
@@ -331,14 +332,8 @@ ul li p {
 
     main {
         justify-self: center;
-        width: 700px;
-    }
-}
-
-
-@media only screen and (max-width: 700px) {
-    main {
         width: 100%;
+        max-width: 700px;
     }
 }
 
